unpackaged/main/default/objects/Opportunity/fields/Current_domain__c.field-meta.xml
<CustomField>
    <fullName>Current_domain__c</fullName>
    <label>Current Domain</label>
    <type>Url</type>
</CustomField>