unpackaged/main/default/objects/Opportunity/fields/Current_Marketing_Product__c.field-meta.xml
<CustomField>
    <fullName>Current_Marketing_Product__c</fullName>
    <label>Current Marketing Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>