unpackaged/main/default/objects/Opportunity/fields/Current_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Fee__c</fullName>
    <formula>Current_Monthly_Marketing_Fee__c +  Current_Monthly_Subscription_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Monthly Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>