unpackaged/main/default/objects/Opportunity/fields/Current_Monthly_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Subscription_Fee__c</fullName>
    <label>Current Monthly Subscription Fee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>