unpackaged/main/default/objects/Opportunity/fields/Current_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Current_Social_Media__c</fullName>
    <label>Current Social Media</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Dominance</fullName>
            </value>
            <value>
                <fullName>No Social Media Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>