unpackaged/main/default/objects/Opportunity/fields/Current_Tier_Plan__c.field-meta.xml
<CustomField>
    <fullName>Current_Tier_Plan__c</fullName>
    <label>Current Tier Plan</label>
    <length>25</length>
    <type>Text</type>
</CustomField>