unpackaged/main/default/objects/Opportunity/fields/Days_since_Demo_was_Held__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Demo_was_Held__c</fullName>
    <formula>TODAY()-DATEVALUE(Demo_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Demo Was Held</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>