unpackaged/main/default/objects/Opportunity/fields/Deal_Split__c.field-meta.xml
<CustomField>
    <fullName>Deal_Split__c</fullName>
    <label>Deal Split?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>