unpackaged/main/default/objects/Opportunity/fields/Default_Ad_Spend__c.field-meta.xml
<CustomField>
    <fullName>Default_Ad_Spend__c</fullName>
    <formula>IF(OR(ISPICKVAL(Tier_Plan__c, &quot;Leads Pro&quot;) ,ISPICKVAL(Tier_Plan__c, &quot;SEO Pro&quot;) 
) , 500, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Ad Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>