unpackaged/main/default/objects/Opportunity/fields/Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date__c</fullName>
    <label>Demo Hold Date</label>
    <type>DateTime</type>
</CustomField>