unpackaged/main/default/objects/Opportunity/fields/Demo_Notes__c.field-meta.xml
<CustomField>
    <fullName>Demo_Notes__c</fullName>
    <label>Demo Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>