unpackaged/main/default/objects/Opportunity/fields/Demo_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Demo_Outcome__c</fullName>
    <label>Demo Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Demo_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Re-set</fullName>
            </value>
            <value>
                <fullName>Flaked</fullName>
            </value>
            <value>
                <fullName>Not_Qualified_during_needs_analysis</fullName>
                <label>Not Qualified</label>
            </value>
            <value>
                <fullName>Qualified</fullName>
                <isActive>false</isActive>
                <label>Qualified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>