unpackaged/main/default/objects/Opportunity/fields/Demo_Status__c.field-meta.xml
<CustomField>
    <fullName>Demo_Status__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <label>Demo Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Held Demo</fullName>
            </value>
            <value>
                <fullName>Held Demo Inbound</fullName>
            </value>
            <value>
                <fullName>Not Held</fullName>
                <default>true</default>
                <label>Not Held</label>
            </value>
            <value>
                <fullName>Demo Canceled</fullName>
                <isActive>false</isActive>
                <label>Demo Canceled</label>
            </value>
            <value>
                <fullName>Demo Flaked</fullName>
                <isActive>false</isActive>
                <label>Demo Flaked</label>
            </value>
            <value>
                <fullName>Demo Rescheduled</fullName>
                <isActive>false</isActive>
                <label>Demo Rescheduled</label>
            </value>
            <value>
                <fullName>No Show</fullName>
                <isActive>false</isActive>
                <label>No Show</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <isActive>false</isActive>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Partial Demo</fullName>
                <isActive>false</isActive>
                <label>Partial Demo</label>
            </value>
            <value>
                <fullName>Re-set</fullName>
                <isActive>false</isActive>
                <label>Re-set</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>