unpackaged/main/default/objects/Opportunity/fields/Design_and_Product_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Design_and_Product_Expectations__c</fullName>
    <inlineHelpText>Please reference pre-demo qualification answers, share initial scoping call recording</inlineHelpText>
    <label>Design and Product Expectations</label>
    <type>TextArea</type>
</CustomField>