unpackaged/main/default/objects/Opportunity/fields/Design_Change_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Design_Change_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design Change/Refresh</label>
    <type>Checkbox</type>
</CustomField>