unpackaged/main/default/objects/Opportunity/fields/Design_Refresh_Buton__c.field-meta.xml
<CustomField>
    <fullName>Design_Refresh_Buton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design Refresh Button</label>
    <type>Checkbox</type>
</CustomField>