unpackaged/main/default/objects/Opportunity/fields/Design_Template__c.field-meta.xml
<CustomField>
    <fullName>Design_Template__c</fullName>
    <label>Design Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bespoke</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Brand Agent</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Brand Property</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Global Luxury Agent</fullName>
            </value>
            <value>
                <fullName>Coldwell Banker Global Luxury Property</fullName>
            </value>
            <value>
                <fullName>Compass &quot;The Innovator&quot;</fullName>
            </value>
            <value>
                <fullName>Compass &quot;The Milestone&quot;</fullName>
            </value>
            <value>
                <fullName>Compass &quot;The Navigator&quot;</fullName>
            </value>
            <value>
                <fullName>Compass &quot;The Prestige&quot;</fullName>
            </value>
            <value>
                <fullName>Compass S&amp;E</fullName>
            </value>
            <value>
                <fullName>Corcoran Agent #1</fullName>
            </value>
            <value>
                <fullName>Corcoran Agent #2</fullName>
            </value>
            <value>
                <fullName>Corcoran Development Site</fullName>
            </value>
            <value>
                <fullName>Custom Website Package</fullName>
            </value>
            <value>
                <fullName>Global Collective Agent</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Pinnacle</fullName>
            </value>
            <value>
                <fullName>Sotheby&#39;s &quot;The Icon&quot;</fullName>
            </value>
            <value>
                <fullName>Sotheby&#39;s &quot;The Inspiration&quot;</fullName>
            </value>
            <value>
                <fullName>Sotheby&#39;s &quot;The Lifestyle&quot;</fullName>
            </value>
            <value>
                <fullName>Sotheby&#39;s &quot;The Trailblazer&quot;</fullName>
            </value>
            <value>
                <fullName>The Classic</fullName>
            </value>
            <value>
                <fullName>The Evolution</fullName>
            </value>
            <value>
                <fullName>The Influencer</fullName>
            </value>
            <value>
                <fullName>Masterpiece</fullName>
                <label>The Masterpiece</label>
            </value>
            <value>
                <fullName>The Masterpiece - CIRE</fullName>
            </value>
            <value>
                <fullName>The Producer</fullName>
            </value>
            <value>
                <fullName>The Producer - CIRE</fullName>
            </value>
            <value>
                <fullName>The Signature</fullName>
            </value>
            <value>
                <fullName>The Visionary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>