unpackaged/main/default/objects/Opportunity/fields/Difficulty_to_Close_Deal__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_to_Close_Deal__c</fullName>
    <label>Difficulty to Close Deal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Difficult</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <isActive>false</isActive>
                <label>Medium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>