unpackaged/main/default/objects/Opportunity/fields/Due_Date_Health__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Health__c</fullName>
    <formula>IMAGE(
    IF (TODAY() &gt;= Due_Date__c + 1, &quot;/img/samples/flag_red.gif&quot;,
    IF (TODAY() + 1 &gt;= Due_Date__c, &quot;/img/samples/flag_yellow.gif&quot;, &quot;/img/samples/flag_green.gif&quot;)),
    &quot;Deadline Status&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Health</label>
    <type>Text</type>
</CustomField>