unpackaged/main/default/objects/Opportunity/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <formula>IF(
 NOT(ISBLANK(Subscription_Extension_Date__c)),
   ADDMONTHS(Subscription_Extension_Date__c,12),
      ADDMONTHS(Subscription_Start_Date__c,
         VALUE(TEXT( Contract_Term_Months__c ) )
      )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>