unpackaged/main/default/objects/Opportunity/fields/Escalation_Description__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Description__c</fullName>
    <label>CX Description</label>
    <type>TextArea</type>
</CustomField>