unpackaged/main/default/objects/Opportunity/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Event_Name</valueSetName>
    </valueSet>
</CustomField>