unpackaged/main/default/objects/Opportunity/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <label>Exclusivity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>