unpackaged/main/default/objects/Opportunity/fields/Existing_website__c.field-meta.xml
<CustomField>
    <fullName>Existing_website__c</fullName>
    <label>Existing website?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>