unpackaged/main/default/objects/Opportunity/fields/Fast_Track__c.field-meta.xml
<CustomField>
    <fullName>Fast_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fast Track</label>
    <type>Checkbox</type>
</CustomField>