unpackaged/main/default/objects/Opportunity/fields/First_Page_Seen__c.field-meta.xml
<CustomField>
    <fullName>First_Page_Seen__c</fullName>
    <label>First Page Seen</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>