unpackaged/main/default/objects/Opportunity/fields/First_Referring_Site__c.field-meta.xml
<CustomField>
    <fullName>First_Referring_Site__c</fullName>
    <label>First Referring Site</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>