unpackaged/main/default/objects/Opportunity/fields/Flake_Date__c.field-meta.xml
<CustomField>
    <fullName>Flake_Date__c</fullName>
    <label>Flake Date</label>
    <type>DateTime</type>
</CustomField>