unpackaged/main/default/objects/Opportunity/fields/Future_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Close_Date__c</fullName>
    <label>Future Close Date</label>
    <type>DateTime</type>
</CustomField>