unpackaged/main/default/objects/Opportunity/fields/Geographic_Target_Area_Areas_Served__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Target_Area_Areas_Served__c</fullName>
    <label>Geographic Target Area/Areas Served</label>
    <length>255</length>
    <type>Text</type>
</CustomField>