unpackaged/main/default/objects/Opportunity/fields/Has_a_follow_up_touchpoint_been_schedule__c.field-meta.xml
<CustomField>
    <fullName>Has_a_follow_up_touchpoint_been_schedule__c</fullName>
    <label>Has a follow up touchpoint been schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>