unpackaged/main/default/objects/Opportunity/fields/Has_the_Account_Manager_been_notified__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Account_Manager_been_notified__c</fullName>
    <label>Has the Account Manager been notified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>