unpackaged/main/default/objects/Opportunity/fields/How_responsive_was_the_client__c.field-meta.xml
<CustomField>
    <fullName>How_responsive_was_the_client__c</fullName>
    <label>How responsive was the client?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>