unpackaged/main/default/objects/Opportunity/fields/IDX_Tool__c.field-meta.xml
<CustomField>
    <fullName>IDX_Tool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IDX Tool</label>
    <type>Checkbox</type>
</CustomField>