unpackaged/main/default/objects/Opportunity/fields/Is_Renewal_Addeddum__c.field-meta.xml
<CustomField>
    <fullName>Is_Renewal_Addeddum__c</fullName>
    <label>Is Renewal Addeddum?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>