unpackaged/main/default/objects/Opportunity/fields/Is_this_opportunity_going_to_add_a_new_w__c.field-meta.xml
<CustomField>
    <fullName>Is_this_opportunity_going_to_add_a_new_w__c</fullName>
    <label>Is this opportunity going to add a new w</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>