unpackaged/main/default/objects/Opportunity/fields/Lead_Gen_Ads_Product__c.field-meta.xml
<CustomField>
    <fullName>Lead_Gen_Ads_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Gen Ads Product</label>
    <type>Checkbox</type>
</CustomField>