unpackaged/main/default/objects/Opportunity/fields/Lead_Gen_Service__c.field-meta.xml
<CustomField>
    <fullName>Lead_Gen_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Gen Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Opportunities (Lead Gen Service)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>