unpackaged/main/default/objects/Opportunity/fields/Lead_Generation_Budget__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generation_Budget__c</fullName>
    <label>Lead Generation Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>