unpackaged/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SaaS Model</fullName>
            </value>
            <value>
                <fullName>Missing IDX Filter</fullName>
            </value>
            <value>
                <fullName>NO CRM</fullName>
            </value>
            <value>
                <fullName>Other Product Deficiency</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Non-Payment/Collections</fullName>
            </value>
            <value>
                <fullName>Opportunity Age</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>