unpackaged/main/default/objects/Opportunity/fields/LP_Site_Reference__c.field-meta.xml
<CustomField>
    <fullName>LP_Site_Reference__c</fullName>
    <label>LP Site Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>