unpackaged/main/default/objects/Opportunity/fields/Manual_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Assignment__c</fullName>
    <label>Manual Welcome email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>