unpackaged/main/default/objects/Opportunity/fields/Manual_Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Assignment_Reason__c</fullName>
    <label>Manual Assignment Reason</label>
    <type>TextArea</type>
</CustomField>