unpackaged/main/default/objects/Opportunity/fields/Marketing_fee_for_roll_up__c.field-meta.xml
<CustomField>
    <fullName>Marketing_fee_for_roll_up__c</fullName>
    <formula>Monthly_Marketing_Fee__c *  Add_or_Subtract_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing fee for roll up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>