unpackaged/main/default/objects/Opportunity/fields/Marketing_past_goals_competitors__c.field-meta.xml
<CustomField>
    <fullName>Marketing_past_goals_competitors__c</fullName>
    <label>Marketing (past, goals, competitors?)</label>
    <type>TextArea</type>
</CustomField>