unpackaged/main/default/objects/Opportunity/fields/Marketing_subscription_payment_term__c.field-meta.xml
<CustomField>
    <fullName>Marketing_subscription_payment_term__c</fullName>
    <label>Marketing Subscription Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>No Marketing Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>