unpackaged/main/default/objects/Opportunity/fields/MLS_Board_text__c.field-meta.xml
<CustomField>
    <fullName>MLS_Board_text__c</fullName>
    <label>(MLS) MLS Board</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>