unpackaged/main/default/objects/Opportunity/fields/MLS_count__c.field-meta.xml
<CustomField>
    <fullName>MLS_count__c</fullName>
    <label>MLS count</label>
    <summaryForeignKey>Opportunity_MLS_Board__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>