unpackaged/main/default/objects/Opportunity/fields/MLS_Last_Refresh__c.field-meta.xml
<CustomField>
    <fullName>MLS_Last_Refresh__c</fullName>
    <label>(MLS) Last Refresh</label>
    <type>Date</type>
</CustomField>