unpackaged/main/default/objects/Opportunity/fields/MLS_Prior_12_months_average_sold_price__c.field-meta.xml
<CustomField>
    <fullName>MLS_Prior_12_months_average_sold_price__c</fullName>
    <label>(MLS) Prior 12 months average sold price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>